# stack

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Stack.c  Stack.sln  Stack.vcxproj  Stack.vcxproj.filters  main.c  stack.c  stack_test.c  test_output.txt
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml
cmake/: stack-config.cmake
include/Stack/: Stack.h
include/stack/: stack.h
